# ScratchLangCPP

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ScratchLangCPP.sln
ScratchLangCPP/: CMakeLists.txt  ScratchLangCPP.aps  ScratchLangCPP.rc  ScratchLangCPP.vcxproj  ScratchLangCPP.vcxproj.filters  resource.h
ScratchLangCPP/Debug/: vc143.idb
ScratchLangCPP/Debug/ScratchLangCPP.tlog/: ScratchLangCPP.lastbuildstate
ScratchLangCPP/data/: README.md
ScratchLangCPP/data/mainscripts/var/: asked  devmode
ScratchLangCPP/include/: compiler.h  decompiler.h  scratchlangfunctions.h  zip_file.hpp
ScratchLangCPP/lib/: miniz.lib  nfd.lib
ScratchLangCPP/src/: Decompiler.cpp  ScratchLangCPP.cpp
ScratchLangCPP/x64/Debug/: Compiler.h_E4803C566C34744.ifc.dt.d.json  Compiler.h_E4803C566C34744.ifc.dt.module.json  Compiler.h_E4803C566C34744.ifc.dt.module.json.command  ScratchLangCPP.exe.recipe  ScratchLangCPP.ilk  scratchlangcompiler.h_5C680DD16DFD2220.ifc.dt.d.json  scratchlangcompiler.h_5C680DD16DFD2220.ifc.dt.module.json.command  tinyfiledialogs.nativecodeanalysis.sarif  tinyfiledialogs.nativecodeanalysis.xml  vc143.idb
ScratchLangCPP/x64/Debug/ScratchLangCPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ScratchLangCPP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ScratchLangLinux/: ScratchLangLinux.vcxproj
ScratchLangSharedFiles/: Compiler.cpp  Decompiler.cpp  Editor.cpp  Input.cpp  ScratchLangCPP.cpp  ScratchLangSharedFiles.vcxitems  compiler.h  decompiler.h  editor.h  input.h  scratchlangfunctions.h  testing.json  yaml-cppd.lib
